[gd_scene load_steps=10 format=2]

[ext_resource path="res://ChoicePanel.gd" type="Script" id=1]
[ext_resource path="res://DialogueUI.gd" type="Script" id=2]
[ext_resource path="res://DialogueBoxText.gd" type="Script" id=3]

[sub_resource type="DynamicFontData" id=5]
font_path = "res://FiraCode-SemiBold.ttf"

[sub_resource type="DynamicFont" id=6]
size = 8
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=1]
font_path = "res://FiraCode-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://FiraCode-Medium.ttf"

[sub_resource type="DynamicFont" id=4]
size = 12
font_data = SubResource( 3 )

[node name="DialogueUI" type="Control"]
visible = false
margin_left = 6.0
margin_top = 136.0
margin_right = 72.0
margin_bottom = 176.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueBoxPanel" type="PanelContainer" parent="."]
margin_left = 2.0
margin_top = -16.0
margin_right = 306.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogeBoxMarginContainer" type="MarginContainer" parent="DialogueBoxPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 297.0
margin_bottom = 49.0

[node name="DialogueBoxText" type="RichTextLabel" parent="DialogueBoxPanel/DialogeBoxMarginContainer"]
margin_right = 290.0
margin_bottom = 42.0
custom_fonts/italics_font = SubResource( 6 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
script = ExtResource( 3 )

[node name="NameTag" type="Label" parent="."]
margin_left = 5.0
margin_top = -29.0
margin_right = 33.0
margin_bottom = -13.0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_stretch_ratio = 50.55
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.356863 )
custom_constants/shadow_offset_x = -1
custom_constants/shadow_offset_y = -1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoiceListVBox" type="VBoxContainer" parent="."]
visible = false
margin_left = 273.0
margin_top = -23.0
margin_right = 302.0
margin_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
custom_constants/separation = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="selected" from="ChoiceListVBox" to="." method="_on_ChoiceListVBox_selected"]
